@@ -443,6 +443,13 @@ gint            gimp_image_get_channel_index     (const GimpImage    *image,
 gint            gimp_image_get_vectors_index     (const GimpImage    *image,
                                                   const GimpVectors  *vectors);
 
+GimpLayer     * gimp_image_get_layer_by_index    (const GimpImage    *image,
+                                                  gint                index);
+GimpChannel   * gimp_image_get_channel_by_index  (const GimpImage    *image,
+                                                  gint                index);
+GimpVectors   * gimp_image_get_vectors_by_index  (const GimpImage    *image,
+                                                  gint                index);
+
 GimpLayer     * gimp_image_get_layer_by_tattoo   (const GimpImage    *image,
                                                   GimpTattoo          tattoo);
 GimpChannel   * gimp_image_get_channel_by_tattoo (const GimpImage    *image,
