@@ -1529,8 +1529,7 @@ xcf_load_old_paths (XcfInfo   *info,
   while (num_paths-- > 0)
     xcf_load_old_path (info, image);
 
-  active_vectors = (GimpVectors *)
-    gimp_container_get_child_by_index (image->vectors, last_selected_row);
+  active_vectors = gimp_image_get_vectors_by_index (image, last_selected_row);
 
   if (active_vectors)
     gimp_image_set_active_vectors (image, active_vectors);
@@ -1670,8 +1669,7 @@ xcf_load_vectors (XcfInfo   *info,
     if (! xcf_load_vector (info, image))
       return FALSE;
 
-  active_vectors = (GimpVectors *)
-    gimp_container_get_child_by_index (image->vectors, active_index);
+  active_vectors = gimp_image_get_vectors_by_index (image, active_index);
 
   if (active_vectors)
     gimp_image_set_active_vectors (image, active_vectors);
